# autobm

./: README.md  pyproject.toml
src/autobm/: autobm.py  client.py  main.py  utils.py
src/autobm.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/autobm/data/: creation.py
src/autobm/data/datasets/: proposer.csv  rps.json
src/autobm/model/: __init__.py  adapter.py  pipeline.py
src/autobm/model/implementations/: cda_pipeline.py  rps_pipeline.py  ulti_pipeline.py
src/autobm/prompt/: manager.py
src/autobm/prompt/specific/cda/: code_tpl.txt  data_itf.txt  game_desc.txt  output.txt  task_desc.txt
src/autobm/prompt/specific/rps/: code_tpl.txt  data_itf.txt  game_desc.txt  output.txt  task_desc.txt
src/autobm/prompt/specific/ulti/: code_tpl.txt  data_itf.txt  game_desc.txt  output.txt  task_desc.txt
src/autobm/prompt/templates/: code.j2  debug.j2  differ.j2  init.j2  judge.j2  model.j2  optimistic.j2
